embedded-system/component_dht22/build/log/idf_py_stdout_output_97572
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/build/bootloader/esp-idf/esptool_py && /home/thomas/.espressif/python_env/idf6.0_py3.11_env/bin/python /home/thomas/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/11] Building C object esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj
FAILED: esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj 
/home/thomas/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-3703-gf9765d0316\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/build/config -I/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/components/dht22/include -I/home/thomas/esp/esp-idf/components/newlib/platform_include -I/home/thomas/esp/esp-idf/components/freertos/config/include -I/home/thomas/esp/esp-idf/components/freertos/config/include/freertos -I/home/thomas/esp/esp-idf/components/freertos/config/xtensa/include -I/home/thomas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/thomas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/thomas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/thomas/esp/esp-idf/components/freertos/esp_additions/include -I/home/thomas/esp/esp-idf/components/esp_hw_support/include -I/home/thomas/esp/esp-idf/components/esp_hw_support/include/soc -I/home/thomas/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/thomas/esp/esp-idf/components/esp_hw_support/dma/include -I/home/thomas/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/thomas/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/thomas/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/thomas/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/thomas/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/thomas/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/thomas/esp/esp-idf/components/heap/include -I/home/thomas/esp/esp-idf/components/heap/tlsf -I/home/thomas/esp/esp-idf/components/log/include -I/home/thomas/esp/esp-idf/components/soc/include -I/home/thomas/esp/esp-idf/components/soc/esp32 -I/home/thomas/esp/esp-idf/components/soc/esp32/include -I/home/thomas/esp/esp-idf/components/soc/esp32/register -I/home/thomas/esp/esp-idf/components/hal/platform_port/include -I/home/thomas/esp/esp-idf/components/hal/esp32/include -I/home/thomas/esp/esp-idf/components/hal/include -I/home/thomas/esp/esp-idf/components/esp_rom/include -I/home/thomas/esp/esp-idf/components/esp_rom/esp32/include -I/home/thomas/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/thomas/esp/esp-idf/components/esp_rom/esp32 -I/home/thomas/esp/esp-idf/components/esp_common/include -I/home/thomas/esp/esp-idf/components/esp_system/include -I/home/thomas/esp/esp-idf/components/esp_system/port/soc -I/home/thomas/esp/esp-idf/components/esp_system/port/include/private -I/home/thomas/esp/esp-idf/components/xtensa/esp32/include -I/home/thomas/esp/esp-idf/components/xtensa/include -I/home/thomas/esp/esp-idf/components/xtensa/deprecated_include -I/home/thomas/esp/esp-idf/components/lwip/include -I/home/thomas/esp/esp-idf/components/lwip/include/apps -I/home/thomas/esp/esp-idf/components/lwip/include/apps/sntp -I/home/thomas/esp/esp-idf/components/lwip/lwip/src/include -I/home/thomas/esp/esp-idf/components/lwip/port/include -I/home/thomas/esp/esp-idf/components/lwip/port/freertos/include -I/home/thomas/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/thomas/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/thomas/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/thomas/esp/esp-idf/components/driver/deprecated -I/home/thomas/esp/esp-idf/components/driver/i2c/include -I/home/thomas/esp/esp-idf/components/driver/touch_sensor/include -I/home/thomas/esp/esp-idf/components/driver/twai/include -I/home/thomas/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/thomas/esp/esp-idf/components/esp_pm/include -I/home/thomas/esp/esp-idf/components/esp_ringbuf/include -I/home/thomas/esp/esp-idf/components/esp_driver_gpio/include -I/home/thomas/esp/esp-idf/components/esp_driver_pcnt/include -I/home/thomas/esp/esp-idf/components/esp_driver_gptimer/include -I/home/thomas/esp/esp-idf/components/esp_driver_spi/include -I/home/thomas/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/thomas/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/thomas/esp/esp-idf/components/esp_driver_i2s/include -I/home/thomas/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/thomas/esp/esp-idf/components/sdmmc/include -I/home/thomas/esp/esp-idf/components/esp_driver_sdspi/include -I/home/thomas/esp/esp-idf/components/esp_driver_sdio/include -I/home/thomas/esp/esp-idf/components/esp_driver_dac/include -I/home/thomas/esp/esp-idf/components/esp_driver_rmt/include -I/home/thomas/esp/esp-idf/components/esp_driver_tsens/include -I/home/thomas/esp/esp-idf/components/esp_driver_sdm/include -I/home/thomas/esp/esp-idf/components/esp_driver_i2c/include -I/home/thomas/esp/esp-idf/components/esp_driver_uart/include -I/home/thomas/esp/esp-idf/components/vfs/include -I/home/thomas/esp/esp-idf/components/esp_driver_ledc/include -I/home/thomas/esp/esp-idf/components/esp_driver_parlio/include -I/home/thomas/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/thomas/esp/esp-idf/components/esp_driver_twai/include -I/home/thomas/esp/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22=. -fmacro-prefix-map=/home/thomas/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj -MF esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj.d -o esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj -c /home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/components/dht22/dht22.c
/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/components/dht22/dht22.c:119:6: error: conflicting types for 'dht22_setup'; have 'void(int)'
  119 | void dht22_setup(int gpio){
      |      ^~~~~~~~~~~
In file included from /home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/components/dht22/dht22.c:8:
/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/components/dht22/include/dht22.h:10:9: note: previous declaration of 'dht22_setup' with type 'DHT22_t(int)'
   10 | DHT22_t dht22_setup(int gpio);
      |         ^~~~~~~~~~~
/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/components/dht22/dht22.c: In function 'dht22_setup':
/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/components/dht22/dht22.c:128:12: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
  128 |     return sensor;
      |            ^~~~~~
/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/components/dht22/dht22.c:119:6: note: declared here
  119 | void dht22_setup(int gpio){
      |      ^~~~~~~~~~~
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/main/main.c: In function 'task_DHT':
/home/thomas/Documents/embedded_system/Project_Weather/dev_component_dht22/main/main.c:18:22: warning: unused variable 'error' [-Wunused-variable]
   18 |                 bool error = dht22_read(sensor);
      |                      ^~~~~
[4/11] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
